<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cvPlayGround"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginHorizontal="6dp"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="12dp">

            <ImageView
                android:id="@+id/imgPG"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_playground"
                android:src="@drawable/playground"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDatePG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:fontFamily="@font/regular"
                android:textSize="12sp"
                android:textColor="@color/secondPrimaryColor"/>

            <TextView
                android:id="@+id/tvNamePG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/playground_name"
                android:fontFamily="@font/bold"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@color/textPrimaryColor"/>

            <TextView
                android:id="@+id/tvAddressPG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:fontFamily="@font/regular"
                android:textSize="12sp"
                android:textColor="@color/secondPrimaryColor"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnInfoProduct">

                <LinearLayout
                    android:id="@+id/lnPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/medium_space"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/regular"
                        android:text="@string/total"
                        android:textColor="@color/secondPrimaryColor"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/bold"
                        android:text="@string/priceProduct"
                        android:textColor="@color/textPrimaryColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/counter"
                    android:fontFamily="@font/bold"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@color/textSecondPrimaryColor"
                    android:background="@color/white"
                    android:gravity="center" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>